# fgm-cpp

./: .gitignore  CMakeLists.txt  README.md  build.cmd  fgm.cpp  fgm.hpp  hungarian.cpp  hungarian.hpp  multGXHSQTr.cpp  normalize_bistochastic.cpp  util.cpp  util.hpp
bindings/python/: converters.cpp  module.cpp  test_fgm.py
